# CurrencyConvertor

./: .gitignore  CMakeLists.txt  README.md
CurrencyConvertor/: Currency.cpp  Currency.hpp  main.cpp
CurrencyConvertor.xcodeproj/: project.pbxproj
CurrencyConvertor.xcodeproj/project.xcworkspace/xcuserdata/lavosami.xcuserdatad/: UserInterfaceState.xcuserstate
CurrencyConvertor.xcodeproj/xcuserdata/lavosami.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
CurrencyConvertor.xcodeproj/xcuserdata/lavosami.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: Currency.hpp
src/: Currency.cpp  main.cpp
